--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
     </aside>
     <main>
         <header>
-                <h1>OLIVIER REBULARD coucou</h1>
+                <h1>OLIVIER REBULARD</h1>
                 <h3>Développeur web freelance</h3>
         </header>
         <article>
