--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,7 @@
         <h2>CONTACT</h2>
         <h2>à propos de moi</h2>
         <h2>loisirs</h2>
+        <img src="img/swim.png">
     </aside>
     <main>
         <header>
