--- a/index.html
+++ b/index.html
@@ -35,21 +35,22 @@
         </aside>
         <article>
             <header>
-                <h1>OLIVIER REBULARD</h1>
+                <h1><span>OLIVIER</span> REBULARD</h1>
                 <h3>Développeur web freelance</h3>
+                <hr align="left">
             </header>
             <section>     
-                    <i class="fas fa-graduation-cap"></i>
-                    <h2>formation</h2>
+                <h2><i class="fas fa-graduation-cap"></i>    formation</h2> 
+                <hr>                      
             </section>
             <section>      
-                    <i class="fas fa-briefcase"></i>
-                    <h2>éxperience professionnelle</h2>   
+                    <h2><i class="fas fa-briefcase"></i>    éxperience professionnelle</h2>  
+                    <hr> 
             </section>
 
             <section>
-                    <i class="fas fa-pencil-alt"></i>
-                    <h2>recommandations</h2>
+                    <h2><i class="fas fa-pencil-alt"></i>    recommandations</h2>
+                    <hr>
             </section>
         </article>
     </main>
