--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>CV de Olivier REBULARD</title>
 <meta charset="utf-8"/>
+<lang="fr">
 <meta name="viewport" content="width-device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/f65bf7e6a7.js" crossorigin="anonymous"></script>
@@ -11,7 +12,7 @@
     <main>
         <aside>
             <header>
-            <img class="rond" src="img/photo.jpg" alt="photo" >
+            <img id="rond" src="img/photo.jpg" alt="photo" >
             </header>
                  <h2>CONTACT</h2>
                    <p>
@@ -27,30 +28,98 @@
                     </p>
                 <h2>à propos de moi</h2>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum repellat nihil saepe ratione alias, aliquam hic, ducimus quas, corrupti odit adipisci? Illo mollitia itaque tempora fugiat, necessitatibus sunt unde velit!  
+                    asdf g ddfghdfghd gdfg dgdfg dfgdfg dfgdfg dgdfg dg
                   </p>
                     
             <h2>loisirs</h2>
-            <img src="img/swim.png">
+            <img id="sport" src="img/velo.png" alt="sport">
         </aside>
         <article>
             <header>
                 <h1><span>OLIVIER</span> REBULARD</h1>
                 <h3>Développeur web freelance</h3>
-                <hr align="left">
+             <hr/>
+			 </header><br></br></br></br>
             </header>
             <section>     
                 <h2><i class="fas fa-graduation-cap"></i>    formation</h2> 
-                <hr>                      
+            <hr/>  </br>  
+			<ul>
+			     <li>
+				     <article>
+					     <section>2019 - 2019 PARIS
+						 </section>
+						 <section>
+						        <header><h4>OPENCLASSROOM</h4></header>
+								<section>
+								    <header><h5>Développeur web junior</h5></header></br>
+									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+								</section>
+						 </section>
+					 </article>
+				 </li>
+				 <li>
+				 <article>
+					     <section>2019 - 2019 PARIS
+						 </section>
+						 <section>
+						        <header><h4>OPENCLASSROOM</h4></header>
+								<section>
+								    <header><h5>Développeur web junior</h5></header></br>
+									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+								</section>
+						 </section>
+					 </article>
+				 </li>
+			</ul>
             </section>
             <section>      
-                    <h2><i class="fas fa-briefcase"></i>    éxperience professionnelle</h2>  
-                    <hr> 
+                    <h2><i class="fas fa-briefcase"></i>    éxperience professionnelle</h2> 
+					<hr/> 
+					<ul>
+			     <li> <article>
+					     <section>2019 - 2019 PARIS
+						 </section>
+						 <section>
+						        <header><h4>OPENCLASSROOM</h4></header>
+								<section>
+								    <header><h5>Développeur web junior</h5></header></br>
+									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+								</section>
+						 </section>
+					 </article>
+				 </li>
+				 <li> 
+				    <article>
+					     <section>2019 - 2019 PARIS
+						 </section>
+						 <section>
+						        <header><h4>OPENCLASSROOM</h4></header>
+								<section>
+								    <header><h5>Développeur web junior</h5></header></br>
+									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+								</section>
+						 </section>
+					 </article>
+				 </li>
+				 <li> 
+				     <article>
+					     <section>2019 - 2019 PARIS
+						 </section>
+						 <section>
+						        <header><h4>OPENCLASSROOM</h4></header>
+								<section>
+								    <header><h5>Développeur web junior</h5></header></br>
+									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+								</section>
+						 </section>
+					 </article>
+				 </li>
+			</ul>
             </section>
-
             <section>
                     <h2><i class="fas fa-pencil-alt"></i>    recommandations</h2>
-                    <hr>
+            <hr/>
             </section>
         </article>
     </main>
