--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 <title>CV de Olivier REBULARD</title>
 <meta charset="utf-8"/>
-<lang="fr">
 <meta name="viewport" content="width-device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/f65bf7e6a7.js" crossorigin="anonymous"></script>
@@ -16,15 +15,15 @@
             </header>
                  <h2>CONTACT</h2>
                    <p>
-                      </br>Adresse</br>
-                           11 Avenue de Savoie </br>
-                           78140 VELIZY</br></br>
-                           Téléphone</br>
-                           01 23 45 67 89</br></br>
-                           Email</br>
-                           nom@email.com</br>
-                          </br>
-                          </br>
+                      <br>Adresse<br>
+                           11 Avenue de Savoie <br>
+                           78140 VELIZY<br><br>
+                           Téléphone<br>
+                           01 23 45 67 89<br><br>
+                           Email<br>
+                           nom@email.com<br>
+                          <br>
+                          <br>
                     </p>
                 <h2>à propos de moi</h2>
                   <p>
@@ -39,82 +38,84 @@
                 <h1><span>OLIVIER</span> REBULARD</h1>
                 <h3>Développeur web freelance</h3>
              <hr/>
-			 </header><br></br></br></br>
-            </header>
-            <section>     
+			 </header><br><br><br><br><br>
+              <section>  
                 <h2><i class="fas fa-graduation-cap"></i>    formation</h2> 
-            <hr/>  </br>  
+            <hr/>  <br>  
 			<ul>
 			     <li>
 				     <article>
-					     <section>2019 - 2019 PARIS
-						 </section>
+					     <header>
+							 <h4>2019 - 2019 </h4>
+							 <br>Paris
+						 </header> 
 						 <section>
-						        <header><h4>OPENCLASSROOM</h4></header>
-								<section>
-								    <header><h5>Développeur web junior</h5></header></br>
-									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
-								</section>
+						        <h4>OPENCLASSROOM</h4>								
+								<h5>Développeur web junior</h5><br>
+						dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg								
 						 </section>
 					 </article>
 				 </li>
 				 <li>
-				 <article>
-					     <section>2019 - 2019 PARIS
-						 </section>
-						 <section>
-						        <header><h4>OPENCLASSROOM</h4></header>
-								<section>
-								    <header><h5>Développeur web junior</h5></header></br>
-									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
-								</section>
-						 </section>
-					 </article>
-				 </li>
+					<article>
+						<header>
+							<h4>2019 - 2019 </h4>
+							<br>Paris
+						</header>
+						<section>
+							   <h4>OPENCLASSROOM</h4>								
+							   <h5>Développeur web junior</h5><br>
+					   dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg								
+						</section>
+					</article>
+				</li>
 			</ul>
             </section>
-            <section>      
-                    <h2><i class="fas fa-briefcase"></i>    éxperience professionnelle</h2> 
+            <section>   
+				 <header>
+					<h2><i class="fas fa-briefcase"></i>éxperience professionnelle</h2> 
+					</header>
 					<hr/> 
 					<ul>
-			     <li> <article>
-					     <section>2019 - 2019 PARIS
-						 </section>
-						 <section>
-						        <header><h4>OPENCLASSROOM</h4></header>
+						<li>
+							<article>
+								<header>
+									<h4>2019 - 2019 </h4>
+									<br>Paris
+								</header>		
 								<section>
-								    <header><h5>Développeur web junior</h5></header></br>
-									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+									   <h4>OPENCLASSROOM</h4>								
+									   <h5>Développeur web junior</h5><br>
+							   dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg								
 								</section>
-						 </section>
-					 </article>
-				 </li>
-				 <li> 
-				    <article>
-					     <section>2019 - 2019 PARIS
-						 </section>
-						 <section>
-						        <header><h4>OPENCLASSROOM</h4></header>
+							</article>
+						</li>
+						<li>
+							<article>
+								<header>
+									<h4>2019 - 2019 </h4>
+									<br>Paris
+								</header>							
 								<section>
-								    <header><h5>Développeur web junior</h5></header></br>
-									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+									   <h4>OPENCLASSROOM</h4>								
+									   <h5>Développeur web junior</h5><br>
+							   dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg								
 								</section>
-						 </section>
-					 </article>
-				 </li>
-				 <li> 
-				     <article>
-					     <section>2019 - 2019 PARIS
-						 </section>
-						 <section>
-						        <header><h4>OPENCLASSROOM</h4></header>
+							</article>
+						</li>
+						<li>
+							<article>
+								<header>
+									<h4>2019 - 2019 Poste actuel</h4>
+									<br>Paris
+								</header>							
 								<section>
-								    <header><h5>Développeur web junior</h5></header></br>
-									<section>dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg</section>
+									   <h4>OPENCLASSROOM</h4>								
+									   <h5>Développeur web junior</h5><br>
+							   dfghstrg gerg ergfdfs dfgd gdfg dgdgdgfdfgdfg dgdfg dfgdfg dgfdfg dfgdfg dfgfgfg dfg								
 								</section>
-						 </section>
-					 </article>
-				 </li>
+							</article>
+						</li>
 			</ul>
             </section>
             <section>
