--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                     </p>
                 <h2>à propos de moi</h2>
                   <p>
-                    asdf g ddfghdfghd gdfg dgdfg dfgdfg dfgdfg dgdfg dg
+					asdf g ddfghdfghd gdfg dgdfg dfgdfg dfgdfg dgdfg dg vdfjgdiopf cdfln,sodknbc; dfklndfk
+					lb cv;,dfklv cvdfklb clvkdflk dlkfbdfbkl lbdflkb dflkb lkfb dfklb lkmb dfklb clkmdfklb l
+					kdfklb dflk bdfklb
+					bbfg
                   </p>
                     
             <h2>loisirs</h2>
@@ -120,9 +123,23 @@
             </section>
             <section>
                     <h2><i class="fas fa-pencil-alt"></i>    recommandations</h2>
-            <hr/>
-            </section>
-        </article>
+			     <hr/>
+			   <article>
+				  <section>
+				  <h5>MAXIME KIEMAN</h5>
+				  Directeur, Mon agence <br>
+				  Téléphone : 01 02 03 04 05 <br>
+				  Email : toto@gmail.fr
+				  </section>
+			      <section>
+				<h5>MAXIME KIEMAN</h5>
+				Directeur, Mon agence <br>
+				Téléphone : 01 02 03 04 05 <br>
+				Email : toto@gmail.fr		 
+                   </section>
+		        </article>
+		     </section>
+	</article>
     </main>
 
     
