--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 										Encadrement d'une équipe de techniciens de laboratoire.<br>
 										Plannings ,formations ,évaluations.<br>
 										Gestion des commandes et des stocks.<br>
-										Responsable de l'informatique du laboratoire.							   
+										Responsable de l'informatique du laboratoire.	
+								</section>								   
 							</article>
 						</li>
 										
@@ -125,20 +126,20 @@
             <section>
                     <h2><i class="fas fa-pencil-alt"></i>    recommandations</h2>
 			     <hr/>
-			   <article>
-				  <section>
+			   <article><h2>.</h2>
+				   <section>
 				  <h5>MAXIME KIEMAN</h5>
 				  Directeur, Mon agence <br>
 				  Téléphone : 01 02 03 04 05 <br>
 				  Email : toto@gmail.fr
-				  </section>
-			      <section>
+				   </section>
+				 <section>
 				<h5>PIERRE DURAND</h5>
 				Directeur, web agence <br>
 				Téléphone : 01 02 03 04 05 <br>
-				Email : toto@gmail.fr		 
-                   </section>
-		        </article>
+				Email : toto@gmail.fr	
+				 </section>	 
+				</article>
 		     </section>
 	</article>
     </main>
