--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <aside>  
 			<div id="photo">        
-			     <img id="rond" src="img/photomoi.jpg" alt="photo" >
+			     <img id="rond" src="img/photomoi.png" alt="photo" >
 			</div>	
 			<div id="contact">		
                  <h2 class="asidetitre">CONTACT</h2>
