--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <main>
         <aside>  
-			<div id="photo">        
-			     <img id="rond" src="img/photomoi.png" alt="photo" >
+			<div id="photo">   
+				<div id="photo2">     
+				 <img id="rond" src="img/photo.png" alt="photo" >
+				</div>
 			</div>	
 			<div id="contact">		
                  <h2 class="asidetitre">CONTACT</h2>
